forth/test/fail/test_const_fold_redundant_align_up.af
use' ../../lang.af
fun: test_const_fold_redundant_align_up { val -- out } val 1 align_up end
